# Parkinsons_FOG

./: .gitignore  .pre-commit-config.yaml  Dockerfile_api  Dockerfile_gateway  Dockerfile_ui  LICENSE  Makefile  README.md  api.service  api_entrypoint.sh  api_main.py  data.dvc  docker-compose.yml  dvc.yaml  folder_structure.txt  logger_config.py  main.py  pyproject.toml  requirements.txt  src_main.py  streamlit_main.py  ui_entrypoint.sh
.github/workflows/: continuous_integration.yaml  dockerization.yaml  run_test.yaml  test_code_runnable.yaml
api/: main.py
api/app/: dependencies.py
config/: .gitignore  Config.yaml  apis.json  inference.json  logging.json  mlflow_dagshub_tracking_cred.json  modeling.yaml  training.json
config/model/: cnn_model.yaml  rnn_model.yaml
config/process/: defog_process.yaml  tdcsfog_process.yaml
data/raw/: .gitignore  daily_metadata.csv.dvc  defog_metadata.csv.dvc  events.csv.dvc  subjects.csv.dvc  (+5 more)
docs/: api_main.md  logger_config.md  main.md  streamlit_main.md
grpc_stream/: __init__.py  client.py  jobs.py  rpc_service_pb2.py  rpc_service_pb2_grpc.py  server.py  service.proto  service_pb2.py  service_pb2_grpc.py
logger_config/: __init__.py  log_config.py
notebooks/: Parkinsons FOG Prediction.ipynb  data.tfrecord  tdcsfog_metadata_processing.ipynb
src/: __init__.py  _build_model.py  _load_data.py  build_model.py  config.py  load_data.py  main.py  preprocess.py  process.py  train_model.py
streamlit_app/: api_client.py  app.py  data_processing.py  style_utils.py
tests/: __init__.py  test_grpc_stream.py  test_model.py
(+98 files in other folders)
