[tool.poetry]
name = "parkinsons-fog"
version = "1.0.0"
description = "A comprehensive system for predicting freezing of gait (FoG) using machine learning models and enabling real-time predictions through gRPC and WebSocket streaming."
authors = ["Aravindh Pandiyan"]
license = "MIT"
readme = "README.md"
packages = [{include = "parkinsons_fog"}]

[tool.poetry.dependencies]
python = ">=3.9.16,<3.12"
black = "^23.7.0"
dask = {extras = ["complete"], version = "^2023.8.1"}
fastapi = "0.101.1"
grpcio = "1.57.0"
grpcio-tools = "1.57.0"
isort = "5.12.0"
mlflow = "2.6.0"
notebook = "^7.0.3"
numpy = "1.23.5"
nvidia-cublas-cu11 = "11.11.3.6"
nvidia-cudnn-cu11 = "8.6.0.163"
pandas = "1.5.3"
pdoc = "14.0.0"
pdoc3 = "0.10.0"
pre-commit = "3.3.3"
pyarrow = "12.0.1"
pydantic = "1.10.9"
scipy = "1.10.1"
seaborn = "^0.12.2"
streamlit = "1.26.0"
tensorflow = "2.12.0"
tensorflow-addons = "0.20.0"
websockets = "11.0.3"
omegaconf = "2.3.0"
hydra-core = "1.3.2"
kaggle = "1.5.13"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
